Bug 266751 - untranslatable string "Switch Conic Radical Lines"
Summary: untranslatable string "Switch Conic Radical Lines"
Status: RESOLVED FIXED
Alias: None
Product: kig
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Pino Toscano
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-02-20 21:01 UTC by Alexander Potashev
Modified: 2011-08-25 08:03 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Potashev 2011-02-20 21:01:07 UTC
Version:           unspecified (using KDE 4.6.0) 
OS:                Linux

Here: kig/objects/conic_types.cc, line 685.
Code:
  KigCommand* kc = new KigCommand( d, "Switch Conic Radical Lines" );

Reproducible: Always
Comment 1 David E. Narvaez 2011-08-25 05:47:54 UTC
Hi Alexander,

I just commited patches to fix this bug, please mark this bug as closed if these changes look good to you. Thanks for spotting this bug!

http://commits.kde.org/kig/12e302eaaf2f946eaf5e57966aedadd28011b10c
http://commits.kde.org/kig/fb1c645d205c82b64b7eaf98dea7f7e888388b16

David E. Narváez
Comment 2 Alexander Potashev 2011-08-25 08:03:35 UTC
Thanks!