Making string "Switch Conic Radical Lines" translatable in Kig

Small patch to fix bug 266751 by adding i18n to the string.
BUG: 266751
REVIEW: 102418